# ChemAgent-QSM-Kemal-Ozkirsehirli

./: LICENSE  README.md  artifact_manifest.json  audit.jsonl  chemagent-qsm-perfected-qa-summary.md  cv_objective_coverage.json  generated_workflow.py  plan.json  plan.yaml  pyproject.toml  report.md  results.json  run.slurm  validation.json  workflow_dag.json
benchmarks/: chemagent_qsm_benchmark.yaml
docs/: BENCHLINE_AND_TESTING_PROTOCOL.md  CV_OBJECTIVE_COVERAGE.md  EXECUTION_BLUEPRINT.md  LITERATURE_AND_ENGINEERING_GROUNDING.md  PERFECTION_PASS_SUMMARY.md
evaluation/: benchmark_report.json
examples/: caffeine_pyscf.yaml  full_cv_objective_smoke.yaml  glass_statmech.yaml  synthetic_glass.npz  water_qm.yaml
qm/: descriptors.json  frequencies.json  ir_spectrum.csv  ir_spectrum.json  optimize.json  single_point.json
scripts/: make_synthetic_glass.py
src/chemagent_qsm/: __init__.py  artifacts.py  audit.py  cli.py  exceptions.py  orchestrator.py  planner.py  schema.py  validators.py
src/chemagent_qsm/agents/: __init__.py  llm_planner.py
src/chemagent_qsm/evaluation/: __init__.py  benchmarks.py  cv_objectives.py
statmech/: dynamical_heterogeneity.json  local_order.json  ml_feature_row.json  ml_features.csv  mobility.json  mscope.csv  mscope.json  msd.csv  msd.json  non_gaussian.csv  non_gaussian.json  rdf.csv  rdf.json  relaxation.json  sisf.json  structure_dynamics_coupling.json  tcf.csv  tcf.json  vacf.csv  vacf.json
tests/: test_cv_objectives.py  test_generated_contract_suite.py  test_planner.py  test_statmech.py  test_workflow.py
(+15 files in other folders)
